@@ -400,8 +400,10 @@ public class CalloutOrder extends CalloutEngine
 					if (s != null && s.length() != 0)
 						mTab.setValue("PaymentRule", s);
 					//	Payment Term
-					ii = Integer.valueOf(rs.getInt(IsSOTrx ? "C_PaymentTerm_ID" : "PO_PaymentTerm_ID"));
-					if (!rs.wasNull())
+					ii = new Integer(rs.getInt(IsSOTrx ? "C_PaymentTerm_ID" : "PO_PaymentTerm_ID"));
+					//MPo, 27/8/2016 If customer default=null, propagate to SO to force sales entry to select Payment term
+					//--if (!rs.wasNull())
+					//
 						mTab.setValue("C_PaymentTerm_ID", ii);
 					//	InvoiceRule
 					s = rs.getString("InvoiceRule");
@@ -1047,27 +1049,27 @@ public class CalloutOrder extends CalloutEngine
 		}
 		//	Product Qty changed - recalc price
 		else if ((mField.getColumnName().equals("QtyOrdered")
-			|| mField.getColumnName().equals("QtyEntered")
-			|| mField.getColumnName().equals("C_UOM_ID")
-			|| mField.getColumnName().equals("M_Product_ID"))
-			&& !"N".equals(Env.getContext(ctx, WindowNo, "DiscountSchema")))
-		{
-			int C_BPartner_ID = Env.getContextAsInt(ctx, WindowNo, "C_BPartner_ID");
-			if (mField.getColumnName().equals("QtyEntered"))
-				QtyOrdered = MUOMConversion.convertProductFrom (ctx, M_Product_ID,
-					C_UOM_To_ID, QtyEntered);
-			if (QtyOrdered == null)
-				QtyOrdered = QtyEntered;
-			boolean IsSOTrx = Env.getContext(ctx, WindowNo, "IsSOTrx").equals("Y");
-			IProductPricing pp = Core.getProductPricing();
-			pp.setInitialValues(M_Product_ID, C_BPartner_ID, QtyOrdered, IsSOTrx, null);
-			Timestamp date = (Timestamp)mTab.getValue("DateOrdered");
-			pp.setPriceDate(date);
-			I_C_OrderLine orderLine = GridTabWrapper.create(mTab, I_C_OrderLine.class);
-			pp.setOrderLine(orderLine, null);
-			pp.setM_PriceList_ID(M_PriceList_ID);
-			int M_PriceList_Version_ID = Env.getContextAsInt(ctx, WindowNo, "M_PriceList_Version_ID");
-			pp.setM_PriceList_Version_ID(M_PriceList_Version_ID);
+				|| mField.getColumnName().equals("QtyEntered")
+				|| mField.getColumnName().equals("C_UOM_ID")
+				|| mField.getColumnName().equals("M_Product_ID"))
+				&& !"N".equals(Env.getContext(ctx, WindowNo, "DiscountSchema")))
+			{
+				int C_BPartner_ID = Env.getContextAsInt(ctx, WindowNo, "C_BPartner_ID");
+				if (mField.getColumnName().equals("QtyEntered"))
+					QtyOrdered = MUOMConversion.convertProductFrom (ctx, M_Product_ID,
+						C_UOM_To_ID, QtyEntered);
+				if (QtyOrdered == null)
+					QtyOrdered = QtyEntered;
+				boolean IsSOTrx = Env.getContext(ctx, WindowNo, "IsSOTrx").equals("Y");
+				IProductPricing pp = Core.getProductPricing();
+				pp.setInitialValues(M_Product_ID, C_BPartner_ID, QtyOrdered, IsSOTrx, null);
+				Timestamp date = (Timestamp)mTab.getValue("DateOrdered");
+				pp.setPriceDate(date);
+				I_C_OrderLine orderLine = GridTabWrapper.create(mTab, I_C_OrderLine.class);
+				pp.setOrderLine(orderLine, null);
+				pp.setM_PriceList_ID(M_PriceList_ID);
+				int M_PriceList_Version_ID = Env.getContextAsInt(ctx, WindowNo, "M_PriceList_Version_ID");
+				pp.setM_PriceList_Version_ID(M_PriceList_Version_ID);
 			//
 			PriceEntered = MUOMConversion.convertProductFrom (ctx, M_Product_ID,
 				C_UOM_To_ID, pp.getPriceStd());
